# Magfield

./: .gitignore  .pre-commit-config.yaml  Algorithms.py  Converter.py  EM.ipynb  Initial data processing.ipynb  LICENSE  MF.ipynb  Magnetic_field_entropy.ipynb  Mixture.py  Processor.py  README.md  README.txt  converter.py  draft.ipynb  essentials.py  histplot.py  monitor.py  pyproject.toml  volatilty.py
notebooks/: MF.ipynb  correlation_diff_eq_dBx.ipynb  data_2020.ipynb  replenishment_of_feature_space.ipynb
src/em/: algorithms.py  mixture.py
src/forecast/: algorithms.py  draft.ipynb
src/magfield/em/: algorithms.py  auxiliary.py  converter.py  mixture.py  monitor.py
src/magfield/forecast/: __init__.py  algorithms.py  draft.ipynb
